# notes

./: .gitignore  TODO.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js
src/: app.html  global.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: embeddings.rs  lib.rs  main.rs
src-tauri/src-tauri/notes/: 28614470-76c9-438d-9cfc-464eae6d9616.json  cd783424-f5f9-4cfb-817c-5aa63ea6534b.json
src-tauri/src/llm_client/: common.rs  gemini_client.rs  mod.rs
src/lib/: NoteEditor.svelte  utils.ts
src/routes/: +page.svelte  CommandPalette.svelte  NoteEditor.svelte  notesStore.js
